add ArmyVectorStore and refactor meta v2